# Ai-agent-demo-

./: .pre-commit-config.yaml  MANIFEST.in  README.md  __init__.py  license.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  linter.yml
ai_agent_demo/: hooks.py  modules.txt
ai_agent_demo/ai_agent/: api.py
ai_agent_demo/ai_agent/core/: anonymizer.py  tools.py
ai_agent_demo/ai_agent/doctype/agent_log/: agent_log.js  agent_log.json  agent_log.py
ai_agent_demo/ai_agent/doctype/agent_session/: agent_session.js  agent_session.json  agent_session.py
ai_agent_demo/ai_agent/module_def/ai_agent/: module_def.json
ai_agent_demo/ai_agent/page/ai_agent_demo/: ai_agent_demo.js  ai_agent_demo.json
ai_agent_demo/ai_agent_demo/: embed_page.py  setup.py
ai_agent_demo/ai_agent_demo/core/: agent.py  erp_tools.py  local_model.py  tools.py
ai_agent_demo/ai_agent_demo/doctype/agent_log/: agent_log.json
ai_agent_demo/ai_agent_demo/doctype/agent_session/: agent_session.json
ai_agent_demo/ai_agent_demo/module_def/ai_agent_demo/: module_def.json
ai_agent_demo/ai_agent_demo/page/ai_agent_demo/: ai_agent_demo.js  ai_agent_demo.json
ai_agent_demo/ai_agent_demo/workspace/ai_agent_demo___techparts/: ai_agent_demo___techparts.json
ai_agent_demo/config/: desktop.py
ai_agent_demo/www/: ai-agent-demo.html  ai-agent-demo.py  ai_agent_embed.html  embed_page_handler.html  embed_page_handler.py
