[project]
name = "ai_agent_demo"
version = "0.1.0"
description = "Demo agenta AI na lokalnym modelu – wybór narzędzi i anonimizacja danych"
readme = "README.md"
license = { file = "license.txt" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/siasty/Ai-agent-demo-"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
