[project]
name = "ai_agent_demo"
version = "0.1.0"
description = "Demo agenta AI na lokalnym modelu – wybór narzędzi i anonimizacja danych"
readme = "README.md"
license = { file = "license.txt" }
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "requests>=2.31.0",
    "spacy>=3.7.0",
]

[project.urls]
Repository = "https://github.com/siasty/Ai-agent-demo-"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
