[project]
name = "ai_agent_demo"
version = "0.1.0"
description = "Demo agenta AI na lokalnym modelu – wybor narzedzi i anonimizacja danych"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/siasty/Ai-agent-demo-"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent_demo*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
